--- a/scss/blocks/_social.scss
+++ b/scss/blocks/_social.scss
@@ -5,12 +5,37 @@
     align-items: center;
     min-height: 79px;
 
+    @include tablet {
+        min-height: 79px;
+        white-space: nowrap;
+    }
+
+    @include mobile {
+        flex-direction: column-reverse;
+    }
+
+
     .copy {
         font-size: 16px;
         font-weight: 400;
         line-height: 19px;
         color: $light-beige-color;
         margin-left: 235px;
+
+        &__space {
+            @include tablet {
+                word-spacing: 5px;
+            }
+        }
+
+        @include tablet {
+            margin-left: 32px;
+            padding-right: 305px;
+        }
+
+        @include mobile {
+            padding: 40px 62px 6px 31px;
+        }
     }
 
     &__list {
@@ -18,6 +43,11 @@
         display: flex;
         align-items: center;
         margin-right: 230px;
+
+        @include mobile {
+            padding-top: 43px;
+            margin: auto;
+        }
     }
 
     &__item {
