--- a/scss/blocks/_registration.scss
+++ b/scss/blocks/_registration.scss
@@ -10,5 +10,9 @@
         color: $dark-pink-color;
         text-transform: uppercase;
         padding-top: 59px;
+
+        @include mobile {
+            text-align: center;
+        }
     }
 }
