--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,5 +12,6 @@
 @import './blocks/registration';
 @import './blocks/form';
 @import './blocks/loyalty';
+@import './blocks/shopping';
 @import './blocks/cart';
 @import './blocks/form__cart';
