--- a/scss/blocks/_cart.scss
+++ b/scss/blocks/_cart.scss
@@ -1,33 +1,35 @@
 .cart {
-    max-width: 1600px;
-    min-height: 148px;
-    background-color: $light-pink-color;
-    margin: 0 auto;
-
-    &__title {
-        @include font(24px, 29px, 400);
-        color: $dark-pink-color;
-        text-transform: uppercase;
-        padding-top: 59px;
-    }
+    margin-top: 96px;
+    margin-left: 230px;
 
     &__position {
+        width: 390px;
+        height: 306px;
         display: flex;
         justify-content: space-between;
         align-items: center;
-    }
 
-    &__position-title {
-        @include font(24px, 29px, 400);
-        text-transform: uppercase;
-    }
 
-    &__position-item {
-        @include font(22px, 26px, 400);
-    }
+        &-description {
+            flex-direction: column;
+        }
 
-    &__position-title-pink {
-        color: $dark-pink-color;
+        &-title {
+            @include font(24px, 29px, 400);
+            text-transform: uppercase;
+        }
+
+        &-item {
+            @include font(22px, 26px, 400);
+        }
+
+        &-title-pink {
+            color: $dark-pink-color;
+        }
+
+        &-close {
+            fill: $grey-soft-color;
+        }
     }
 
     &__button {
