--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,4 +17,5 @@
 @import './blocks/cart';
 @import './blocks/form__cart';
 @import './blocks/form__checkout';
-@import './blocks/product';
+@import './blocks/commodity';
+@import './blocks/description';
