--- a/scss/blocks/_cart.scss
+++ b/scss/blocks/_cart.scss
@@ -5,7 +5,6 @@
 
     &__product {
         margin-top: 96px;
-        margin-left: 230px;
     }
 
     &__position {
@@ -50,9 +49,16 @@
             &-close {
                 fill: $grey-soft-color;
                 position: absolute;
-                margin: 28px 22px 260px 350px;
             }
         }
+    }
+
+    &__buttons {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 32px;
+        margin-bottom: 144px;
     }
 
     &__button {
@@ -60,8 +66,6 @@
         @include font(14px, 17px, 300);
         text-transform: uppercase;
         padding: 17px 41px 16px 39px;
-        margin-top: 32px;
-        margin-bottom: 144px;
         background-color: $white-color;
         white-space: nowrap;
     }
@@ -75,6 +79,5 @@
         color: $black-color;
         border: 1px solid;
         white-space: nowrap;
-        margin-right: 132px;
     }
 }
