--- a/scss/blocks/_information.scss
+++ b/scss/blocks/_information.scss
@@ -2,6 +2,7 @@
     background-color: $antracite-grey-color;
     background-size: cover;
     text-align: center;
+    margin-top: 96px;
 
     &__list {
         display: flex;
