--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -13,6 +13,8 @@ $middle-grey-color: #E1E1E1;
 $bright-grey-color: #9F9F9F;
 $medium-grey-color: #B1B1B1;
 $grey-soft-color: #575757;
+$grey-cold-color: #6F6E6E;
+$very-light-grey-color: #F7F7F7;
 $very-soft-grey-color: #F5F3F3;
 $desktop-width: 1600px;
 $tablet-width: 768px;
