--- a/css/style.css
+++ b/css/style.css
@@ -11298,7 +11298,7 @@ body {
 @media (max-width: 375px) {
   .subscribe__button {
     width: 93%;
-    height: 58px;
+    height: 49px;
     padding: 7px 7px 6px 8px;
   }
 }
@@ -11592,14 +11592,34 @@ body {
   padding-top: 59px;
 }
 
+@media (max-width: 375px) {
+  .shopping__cart-title {
+    text-align: center;
+  }
+}
+
 .cart {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
+@media (max-width: 768px) {
+  .cart {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 375px) {
+  .cart {
+    justify-content: center;
+  }
+}
+
 .cart__product {
   margin-top: 96px;
+  margin-right: 129px;
 }
 
 .cart__position {
@@ -11610,16 +11630,16 @@ body {
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
 
-.cart__position-description {
-  width: 24%;
-  height: 306px;
-  margin-left: 31px;
+@media (max-width: 375px) {
+  .cart__position {
+    width: 100%;
+  }
 }
 
-.cart__position-box {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.cart__position-description {
+  width: 40%;
+  height: 306px;
+  margin-left: 31px;
 }
 
 .cart__position-title {
@@ -11629,14 +11649,23 @@ body {
   font-weight: 400;
   text-transform: uppercase;
   margin-bottom: 42px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 22px;
+}
+
+@media (max-width: 375px) {
+  .cart__position-title {
+    font-size: 16px;
+    line-height: 19px;
+    font-weight: 400;
+  }
 }
 
 .cart__position-close {
   fill: #575757;
-}
-
-.cart__position-list {
-  padding-bottom: 6px;
+  margin-right: 22px;
 }
 
 .cart__position-item {
@@ -11644,6 +11673,31 @@ body {
   font-size: 22px;
   line-height: 26px;
   font-weight: 400;
+}
+
+@media (max-width: 375px) {
+  .cart__position-item {
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 400;
+  }
+}
+
+.cart__position-item-number {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  font-size: 22px;
+  line-height: 26px;
+  font-weight: 400;
+}
+
+@media (max-width: 375px) {
+  .cart__position-item-number {
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 400;
+  }
 }
 
 .cart__position-item-quantity {
@@ -11674,6 +11728,14 @@ body {
   white-space: nowrap;
 }
 
+@media (max-width: 375px) {
+  .cart__button {
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 400;
+  }
+}
+
 .cart__link {
   width: 41%;
   font-size: 14px;
@@ -11687,13 +11749,27 @@ body {
   white-space: nowrap;
 }
 
-.form__cart {
-  flex-direction: column;
-  margin-left: 129px;
+@media (max-width: 375px) {
+  .cart__link {
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 400;
+  }
 }
 
-.form__cart-form {
-  flex-direction: column;
+@media (max-width: 768px) {
+  .form__cart {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
+@media (max-width: 375px) {
+  .form__cart {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .form__cart-title {
@@ -11724,11 +11800,23 @@ body {
   margin-top: 24px;
 }
 
+@media (max-width: 375px) {
+  .form__cart-button {
+    text-transform: lowercase;
+  }
+}
+
 .form__checkout {
   width: 360px;
   height: 214px;
   background-color: #F5F3F3;
   margin-top: 58px;
+}
+
+@media (max-width: 768px) {
+  .form__checkout {
+    margin-bottom: 147px;
+  }
 }
 
 .form__checkout-text {
@@ -11779,6 +11867,13 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+@media (max-width: 375px) {
+  .commodity {
+    justify-content: center;
+    flex-wrap: wrap;
+  }
 }
 
 .commodity__title {
@@ -11874,6 +11969,14 @@ body {
   padding-bottom: 49px;
 }
 
+@media (max-width: 375px) {
+  .commodity__characteristic-choose {
+    font-size: 10px;
+    line-height: 12px;
+    font-weight: 400;
+  }
+}
+
 .commodity__characteristic-uppercase {
   font-size: 14px;
   line-height: 16px;
@@ -11910,7 +12013,6 @@ body {
 
 .carousel-img {
   background-color: #F8F8F8;
-  margin-left: 514px;
 }
 
 .carousel-control-prev-icon, .carousel-control-next-icon {
@@ -11933,20 +12035,38 @@ body {
   list-style-type: none;
 }
 
-.description__wrapper {
+@media (max-width: 768px) {
+  .description__list__item-tablet {
+    display: none;
+  }
+}
+
+@media (max-width: 375px) {
+  .description__list__item-tablet {
+    display: block;
+  }
+}
+
+@media (max-width: 375px) {
+  .description__list__item-mobile {
+    display: none;
+  }
+}
+
+.description__list__wrapper {
   top: 1576px;
   width: 360px;
   min-height: 420px;
   margin-bottom: 128px;
 }
 
-.description__commodity {
+.description__list__commodity {
   background: #F8F8F8;
   padding: 25px 29px 20px 17px;
   text-align: left;
 }
 
-.description__title {
+.description__list__title {
   font-size: 13px;
   line-height: 16px;
   font-weight: 400;
@@ -11954,14 +12074,14 @@ body {
   text-transform: uppercase;
 }
 
-.description__text {
+.description__list__text {
   font-size: 14px;
   line-height: 17px;
   font-weight: 300;
   color: #5D5D5D;
 }
 
-.description__price {
+.description__list__price {
   font-size: 16px;
   line-height: 19px;
   font-weight: 400;
