--- a/scss/blocks/_description.scss
+++ b/scss/blocks/_description.scss
@@ -6,35 +6,53 @@
         justify-content: space-between;
         flex-wrap: wrap;
         list-style-type: none;
-    }
 
-    &__wrapper {
-        top: 1576px;
-        width: 360px;
-        min-height: 420px;
-        margin-bottom: 128px;
-    }
+        &__item {
 
-    &__commodity {
-        background: $grey-color;
-        padding: 25px 29px 20px 17px;
-        text-align: left;
-    }
+            &-tablet {
+                @include tablet {
+                    display: none;
+                }
 
-    &__title {
-        @include font(13px, 16px, 400);
-        color: $black-color;
-        text-transform: uppercase;
-    }
+                @include mobile {
+                    display: block;
+                }
+            }
 
-    &__text {
-        @include font(14px, 17px, 300);
-        color: $dark-grey-color;
-    }
+            &-mobile {
+                @include mobile {
+                    display: none;
+                }
+            }
+        }
 
-    &__price {
-        @include font(16px, 19px, 400);
-        color: $dark-pink-color;
-    }
+        &__wrapper {
+            top: 1576px;
+            width: 360px;
+            min-height: 420px;
+            margin-bottom: 128px;
+        }
 
+        &__commodity {
+            background: $grey-color;
+            padding: 25px 29px 20px 17px;
+            text-align: left;
+        }
+
+        &__title {
+            @include font(13px, 16px, 400);
+            color: $black-color;
+            text-transform: uppercase;
+        }
+
+        &__text {
+            @include font(14px, 17px, 300);
+            color: $dark-grey-color;
+        }
+
+        &__price {
+            @include font(16px, 19px, 400);
+            color: $dark-pink-color;
+        }
+    }
 }
