--- a/scss/blocks/_subscribe.scss
+++ b/scss/blocks/_subscribe.scss
@@ -91,7 +91,7 @@
         }
 
         @include mobile {
-            @include font(14px, 21px)
+            @include font(14px, 21px);
         }
     }
 
@@ -132,7 +132,7 @@
 
         @include mobile {
             width: 93%;
-            height: 58px;
+            height: 49px;
             padding: 7px 7px 6px 8px;
         }
     }
