редактировали product.html блок с товаром

--- a/css/style.css
+++ b/css/style.css
@@ -11867,6 +11867,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 129px;
 }
 
 @media (max-width: 375px) {
